yay, migration to generics done